[package]
name = "stratum-rental-proxy"
version = "0.1.0"
edition = "2021"
description = "Stratum hashrate-rental proxy: sellers' miners run on their own default pool until rented, then are server-side rerouted to the buyer's target — no miner reconfiguration. Stratum V1 first, V2 planned."
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
axum = "0.8"

# Stratum V2 protocol + Noise stack, optional (only with `--features sv2`) so
# the default SV1 build stays lean. Pulled from the upstream stratum-mining git
# repo (NOT crates.io): the crates.io releases at current majors don't compile
# together (mining_sv2 4.0's derives reference `super::binary_sv2`), whereas the
# git workspace is internally consistent. stratum-core re-exports the whole set
# (codec_sv2 + noise_sv2 + parsers_sv2 + mining_sv2 + …).
stratum-core = { git = "https://github.com/stratum-mining/stratum", rev = "38fe7a4a00812cc4b8543dcffbd4381a9958ed49", optional = true }
# secp256k1 matched to noise_sv2's version so the Keypair type lines up for the
# Noise NX handshake; rand for key generation.
secp256k1 = { version = "0.28", features = ["rand", "alloc"], optional = true }
rand = { version = "0.8", optional = true }

[features]
# Build the SV2 downstream foundation (Noise handshake + frame round-trips).
sv2 = ["dep:stratum-core", "dep:secp256k1", "dep:rand"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = "thin"
