[package]
name = "stratum-rental-proxy"
version = "0.1.0"
edition = "2021"
description = "Stratum hashrate-rental proxy: sellers' miners run on their own default pool until rented, then are server-side rerouted to the buyer's target — no miner reconfiguration. Stratum V1 first, V2 planned."
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "macros", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
axum = "0.8"
# Persistent state (rigs + orders) in embedded SQLite — ACID, WAL, one file.
# Typed compile-time-checked queries; the `.sqlx/` offline cache (committed)
# lets the build run without a live DB (SQLX_OFFLINE).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Stratum V2 protocol + Noise transport, optional (only with `--features sv2`)
# so the default SV1 build stays lean. Pulled from the upstream stratum-mining
# git repos (NOT crates.io): the crates.io releases at current majors don't
# compile together (mining_sv2's derives reference `super::binary_sv2`), whereas
# the git workspaces are internally consistent.
#   - stratum-core re-exports the protocol set (codec_sv2 + noise_sv2 +
#     parsers_sv2 + mining_sv2 + common_messages_sv2 + binary_sv2).
#   - stratum-apps::network_helpers gives the Noise TCP transport
#     (connect_with_noise / accept_noise_connection → NoiseTcpStream).
# stratum-core and stratum-apps' transitive stratum-core unify on branch=main;
# the exact rev is pinned in Cargo.lock (kept in sync with the sv2-apps rev).
stratum-core = { git = "https://github.com/stratum-mining/stratum", branch = "main", optional = true }
stratum-apps = { git = "https://github.com/stratum-mining/sv2-apps", rev = "27985c63f7c47310281289d4da17b90780bb11fd", default-features = false, features = ["network", "std"], optional = true }
# secp256k1 matched to noise_sv2's version so the keypair types line up; rand
# for key generation.
secp256k1 = { version = "0.28", features = ["rand", "alloc"], optional = true }
rand = { version = "0.8", optional = true }

[features]
# Build the SV2 downstream relay + foundation (Noise transport + protocol).
sv2 = ["dep:stratum-core", "dep:stratum-apps", "dep:secp256k1", "dep:rand"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = "thin"
